# TOWNSEMU

./: .gitignore  README.md  build_vs.bat  buildlibretro32.bat  buildlibretro64.bat
docs/: Informe_tecnico.txt  plan_libretro_tsugaru_definitivo.md
src/: CMakeLists.txt
src/discimg/: discimg.cpp  discimg.h
src/libretro/: CMakeLists.txt  libretro.cpp  libretro.h
src/main_cui/argv/: townsargv.cpp
src/towns/: towns.h  townsthread.cpp  townsthread.h
src/towns/cdrom/: cdrom.h
src/towns/gameport/: gameport.cpp
